# MiniTextSearch-Enhanced

./: .gitignore  CLAUDE.md  CMakeLists.txt  MiniTextSearch.spec  README.md  app.py  index.html  stopwords.txt
dll_src/index_build/: index_build.c  index_build.h
dll_src/query_handle/: query_handle.c  query_handle.h
dll_src/rank_score/: rank_score.c  rank_score.h
dll_src/result_out/: result_out.c  result_out.h
dll_src/text_io/: text_io.c  text_io.h
docs_lib/: Heidi.txt  Little Women.txt  Macbeth.txt  Pride and Prejudice.txt  The Narrow Door.txt  The Red and the Black.txt  Wuthering Heights.txt  doc1.txt  doc2.txt  doc3.txt  doc4.txt  test_docx.docx  test_html.html
main_proj/: main.c
public/: public.h
pyinstaller/: build.bat
